styling added to features

--- a/FrontEnd/src/css/features.css
+++ b/FrontEnd/src/css/features.css
@@ -15,3 +15,9 @@
 .form {
     width: 200px;
 }
+
+.logged-out-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
